--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
         <p class=""style="margin:5px;"></p>
         <li>
             <strong>Localization of Mobile Agents</strong> (2019-2022)<br>
-            Master’s level course at the Deparment of Informatics, Karlsruhe Institute of Technology
+            Master’s level course at the Deparment of Informatics, Karlsruhe Institute of Technology<br>
             <em>Teaching assistant</em> for four consecutive years</a>
         </li>
         <p class=""style="margin:5px;"></p>
         <li>
             <strong>Seminar: Moderne Methoden der Informationsverarbeitung</strong> & <strong>Proseminar: Anthropomatik: Von der Theorie zur Anwendung</strong> (2017-2021)<br>
             Bachelor's and Master’s level seminars at the Deparment of Informatics, Karlsruhe Institute of Technology<br>
-            <em>Supervision</em> at least one student for each kind of per semester (twice a year)</a>
+            <em>Supervision</em> at least one student for each kind per semester (twice a year)</a>
         </li>
         <p class=""style="margin:5px;"></p>
         <li>
@@ -100,7 +100,7 @@
     <ul>
         <li>@ Linköping University (ongoing)</li>
         <ul>
-            <li>Ziyu Cao at  (incoming PhD student, co-supervised with Fredrik Gustafsson) </li>
+            <li>Ziyu Cao (incoming PhD student, co-supervised with Fredrik Gustafsson) </li>
             <p class=""style="margin:2px;"></p>
             <li>Qihao Yuan (remote master's student) </li>
         </ul>
@@ -449,7 +449,7 @@
 
     <div class="container">
       <div align="center">
-           <a href="https://clustrmaps.com/" title="Visit tracker"><img src=""></a>
+<a href="https://clustrmaps.com/site/1bvh5" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=whROBzwbYNEISJtrpOSYJf8HGUBFewZkasFc6p6eEmI&cl=ffffff"></a>
       </div>
     </div>
     </td>
