--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <li>
             <strong> Conditional Densities and Likelihoods for Hypertoroidal Densities Based on Trigonometric Polynomials </strong><br>
             Florian Pfaff, <u>Kailai Li</u>, Uwe D. Hanebeck <br>
-            <em>Proceedings of the 2021 IEEE International Conference on Multisensor Fusion and Integration for Intelligent Systems (MFI 2021)</em>, Karlsruhe, Germany <a href="https://doi.org/10.1109/MFI52462.2021.9591160">[IEEE]</a>
+            <em>Proceedings of the 2021 IEEE International Conference on Multisensor Fusion and Integration for Intelligent Systems (MFI)</em>, Karlsruhe, Germany <a href="https://doi.org/10.1109/MFI52462.2021.9591160">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
@@ -252,7 +252,7 @@
         <li>
             <strong>Dual Quaternion Sample Reduction for SE(2) Estimation</strong><br>
             <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck<br>
-            <em>Proceedings of the 2020 IEEE 23rd International Conference on Information Fusion (FUSION)</em>, Rustenburg, South Africa <a href="https://doi.org/10.23919/FUSION45008.2020.9190388">[IEEE]</a><a href="https://www.youtube.com/watch?v=YfZU5ZRUObU">[video]</a>
+            <em>Proceedings of the 2020 IEEE 23rd International Conference on Information Fusion (FUSION)</em>, Rustenburg, South Africa <a href="https://doi.org/10.23919/FUSION45008.2020.9190388">[IEEE]</a> <a href="https://www.youtube.com/watch?v=YfZU5ZRUObU">[video]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
@@ -449,7 +449,7 @@
 
     <div class="container">
       <div align="center">
-<a href="https://clustrmaps.com/site/1bvh5" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=whROBzwbYNEISJtrpOSYJf8HGUBFewZkasFc6p6eEmI&cl=ffffff"></a>
+	<a href="https://clustrmaps.com/site/1bvh5" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=whROBzwbYNEISJtrpOSYJf8HGUBFewZkasFc6p6eEmI&cl=ffffff"></a>
       </div>
     </div>
     </td>
