--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </tbody>
     </table>
     <p>
-        <span style="color:purple;font-size:15px;font-weight:bold;text-decoration:underline">I am now available for faculty position starting 2024.</span>
+        <span style="color:darkviolet;font-size:15px;font-weight:bold;text-decoration:underline">I am now available for faculty position starting 2024.</span>
     </p>
 
     <h3>Short Bio</h3>
