--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
         <li>
             <strong>  The State Space Subdivision Filter for SE(3) </strong><br>
             Florian Pfaff, <u>Kailai Li</u>, Uwe D Hanebeck <br>
-            <em>Proceedings of the 25th International Conference on Information Fusion (FUSION)</em>, Linköping, Sweden <a href="https://doi.org/10.23919/FUSION49751.2022.9841384">[IEEE]</a>
+            <em>Proceedings of the 2022 25th International Conference on Information Fusion (FUSION)</em>, Linköping, Sweden <a href="https://doi.org/10.23919/FUSION49751.2022.9841384">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong> Circular Discrete Reapproximation </strong><br>
             <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck <br>
-            <em>Proceedings of the 25th International Conference on Information Fusion (FUSION)</em>, Linköping, Sweden <a href="https://doi.org/10.23919/FUSION49751.2022.9841269">[IEEE]</a><br>
+            <em>Proceedings of the 2022 25th International Conference on Information Fusion (FUSION)</em>, Linköping, Sweden <a href="https://doi.org/10.23919/FUSION49751.2022.9841269">[IEEE]</a><br>
             <span style="color:darkviolet;font-weight:bold;">International Society for Information Fusion (ISIF) Jean-Pierre Le Cadre Best Paper Award: First Runner-Up</span>
         </li>
         <p style="text-decoration:underline;text-decoration-thickness:3px"><strong>2021</strong></p>
@@ -252,13 +252,13 @@
         <li>
             <strong>Dual Quaternion Sample Reduction for SE(2) Estimation</strong><br>
             <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck<br>
-            <em>Proceedings of the 2020 IEEE 23rd International Conference on Information Fusion (FUSION)</em>, Rustenburg, South Africa <a href="https://doi.org/10.23919/FUSION45008.2020.9190388">[IEEE]</a> <a href="https://www.youtube.com/watch?v=YfZU5ZRUObU">[video]</a>
+            <em>Proceedings of the 2020 23rd International Conference on Information Fusion (FUSION)</em>, Rustenburg, South Africa <a href="https://doi.org/10.23919/FUSION45008.2020.9190388">[IEEE]</a> <a href="https://www.youtube.com/watch?v=YfZU5ZRUObU">[video]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong> A Hyperhemispherical Grid Filter for Orientation Estimation,</strong><br>
             Florian Pfaff, <u>Kailai Li</u>, Uwe D. Hanebeck<br>
-            <em>Proceedings of the 2020 IEEE 23rd International Conference on Information Fusion (FUSION)</em>, Rustenburg, South Africa <a href="https://doi.org/10.23919/FUSION45008.2020.9190611">[IEEE]</a>
+            <em>Proceedings of the 2020 23rd International Conference on Information Fusion (FUSION)</em>, Rustenburg, South Africa <a href="https://doi.org/10.23919/FUSION45008.2020.9190611">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
@@ -295,7 +295,7 @@
         <li>
             <strong>Geometry-Driven Deterministic Sampling for Nonlinear Bingham Filtering</strong><br>
             <u>Kailai Li</u>, Daniel Frisch, Benjamin Noack, Uwe D. Hanebeck<br>
-            <em>Proceedings of 2019 European Control Conference (ECC)</em>, Naples, Italy <a href="https://doi.org/10.23919/ECC.2019.8796102">[IEEE]</a>
+            <em>Proceedings of the 2019 European Control Conference (ECC)</em>, Naples, Italy <a href="https://doi.org/10.23919/ECC.2019.8796102">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
@@ -338,7 +338,7 @@
         <li>
         <strong>Wavefront Orientation Estimation Based on Progressive Bingham Filtering</strong><br>
          <u>Kailai Li</u>, Daniel Frisch, Susanne Radtke, Benjamin Noack, Uwe D. Hanebeck<br>
-        <em>Proceedings of the IEEE ISIF Workshop on Sensor Data Fusion: Trends, Solutions, Applications (SDF)</em>, Bonn, Germany <a href="https://doi.org/10.1109/SDF.2018.8547094">[IEEE]</a>
+        <em>Proceedings of the 2018 IEEE ISIF Workshop on Sensor Data Fusion: Trends, Solutions, Applications (SDF)</em>, Bonn, Germany <a href="https://doi.org/10.1109/SDF.2018.8547094">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
     </ul>
