--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </p>
     <p style="text-align:justify">
         Over the years, I have been very lucky to cooperate with many students as a <a href="#teaching">teacher</a> and <a href="#supervision">supervisor</a>.
-        I also have the gratitude to provide regular <a href="#services"> academic services</a> to a few major conferences in robotics, control and information fusion. I have been experienced in writing research grant proposals
+        I also have the gratitude to provide regular <a href="#services"> academic services</a> to a few major conferences in robotics, control and information fusion. I have been experienced with writing research grant proposals
         through a few applications for <a href="#projects">projects</a> with my advisors.
     </p>
     <hr>
@@ -359,7 +359,7 @@
         <p class=""style="margin:5px;"></p>
         <li>
             <strong>Review for journals</strong><br>
-            IEEE Robotics and Automation Letters (comparably more regular with more than 10 paper)<br>
+            IEEE Robotics and Automation Letters (comparably more regular, >10 papers)<br>
             IEEE Control Systems Letters<br>
             IEEE Transactions on Pattern Analysis and Machine Intelligence<br>
             IEEE Transactions on Automatic Control<br>
@@ -370,7 +370,7 @@
             Statistics and Computing<br>
         </li>
         <p class=""style="margin:5px;"></p>
-        <li><strong>Program Committee</strong><br>
+        <li><strong>Program committee</strong><br>
             Co-organizing the Special Session on Directional Estimation at conferences FUSION (2018, 2019, 2020, 2022) and MFI (2020, 2021)
         </li>
     </ul>
@@ -428,7 +428,7 @@
             <li>
                 <strong>Recursive Estimation of Rigid Body Motions</strong> (2017-2020)<br>
                 Funded  within the Individual Research Grant Program by the German Research Foundation (DFG), Germany <a href="https://gepris.dfg.de/gepris/projekt/325035548/ergebnisse">[link]</a> <br>
-                <em>Project execution during PhD research. PI: Uwe D. Hanebeck</em>
+                <em>Roles: Project execution during PhD research. PI: Uwe D. Hanebeck</em>
             </li>
         </ul>
         <hr>
