--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
             <strong>TSRT78: Digital Signal Processing</strong> (since 2022)<br>
             Master’s level course at the Department of Electrical Engineering, Linköping University
              <a href="https://www.rt.isy.liu.se/student/tsrt78">[link]</a><br>
-            <em>Examiner and lecturer</em>. See also my self-written lecture manuscript <a href="materials/lecture_manuscript_tsrt78.pdf">[PDF]</a>
+            <em>Examiner and lecturer</em>. See also my self-written lecture manuscript <a href="materials/lecture_manuscript_tsrt78.pdf">[PDF]</a><br>
+            <span style="color:darkviolet;font-weight:bold;">Highest course evaluation recorded for TSRT78 since 2018 by students</span>
         </li>
         <p class=""style="margin:5px;"></p>
         <li>
