added years to arxiv papers

--- a/index.html
+++ b/index.html
@@ -121,19 +121,19 @@
         <li>
             <strong>On Embedding B-Splines in Recursive State Estimation</strong><br>
             <u>Kailai Li</u><br>
-            <em>arXiv preprint</em>, arXiv:2307.00637 <a href="https://arxiv.org/abs/2307.00637">[arXiv]</a>
+            <em>arXiv preprint</em>, arXiv:2307.00637, 2023 <a href="https://arxiv.org/abs/2307.00637">[arXiv]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Gaussian Process on the Product of Directional Manifolds</strong><br>
             Ziyu Cao, <u>Kailai Li</u><br>
-            <em>arXiv preprint</em>, arXiv:2303.06799 <a href="https://arxiv.org/abs/2303.06799">[arXiv]</a> <a href="https://github.com/KIT-ISAS/hyperToroidalGP">[code]</a>
+            <em>arXiv preprint</em>, arXiv:2303.06799, 2023 <a href="https://arxiv.org/abs/2303.06799">[arXiv]</a> <a href="https://github.com/KIT-ISAS/hyperToroidalGP">[code]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Hyperspherical Dirac Mixture Reapproximation</strong><br>
             <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck<br>
-            <em>arXiv preprint</em> arXiv:2110.10411 <a href="https://arxiv.org/abs/2110.10411">[arXiv]</a>
+            <em>arXiv preprint</em> arXiv:2110.10411, 2021 <a href="https://arxiv.org/abs/2110.10411">[arXiv]</a>
         </li>
     </ul>
     <h3 id="thesis"> Dissertation </h3>
