--- a/index.html
+++ b/index.html
@@ -302,19 +302,19 @@
         <li>
             <strong>Geometry-Driven Stochastic Modeling of SE(3) States Based on Dual Quaternion Representation</strong><br>
             <u>Kailai Li</u>, Florian Pfaff, Uwe D. Hanebeck<br>
-            <em>Proceedings of the 2019 IEEE International Conference on Multisensor Fusion and Integration for Intelligent Systems (MFI)</em>, Taipei, Taiwan <a href="https://doi.org/10.1109/ICPHYS.2019.8780254">[IEEE]</a>
+            <em>Proceedings of the 2019 IEEE International Conference on Industrial Cyber Physical Systems (ICPS)</em>, Taipei, Taiwan <a href="https://doi.org/10.1109/ICPHYS.2019.8780254">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Comparative Study of Track-to-Track Fusion Methods for Cooperative Tracking with Bearings-only Measurements</strong><br>
              Susanne Radtke, <u>Kailai Li</u>, Benjamin Noack, Uwe D. Hanebeck<br>
-            <em>Proceedings of the 2019 IEEE International Conference on Multisensor Fusion and Integration for Intelligent Systems (MFI)</em>, Taipei, Taiwan <a href="https://doi.org/10.1109/ICPHYS.2019.8780330">[IEEE]</a>
+            <em>Proceedings of the 2019 IEEE International Conference on Industrial Cyber Physical Systems (ICPS)</em>, Taipei, Taiwan <a href="https://doi.org/10.1109/ICPHYS.2019.8780330">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Association Likelihoods for Directional Estimation</strong><br>
              Florian Pfaff, <u>Kailai Li</u>, Uwe D. Hanebeck<br>
-            <em>Proceedings of the 2019 IEEE International Conference on Multisensor Fusion and Integration for Intelligent Systems (MFI)</em>, Taipei, Taiwan <a href="https://doi.org/10.1109/ICPHYS.2019.8780240">[IEEE]</a>
+            <em>Proceedings of the 2019 IEEE International Conference on Industrial Cyber Physical Systems (ICPS)</em>, Taipei, Taiwan <a href="https://doi.org/10.1109/ICPHYS.2019.8780240">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
