--- a/index.html
+++ b/index.html
@@ -327,13 +327,13 @@
         <li>
             <strong>Nonlinear Progressive Filtering for SE(2) Estimation</strong><br>
             <u>Kailai Li</u>, Gerhard Kurz, Lukas Bernreiter, Uwe D. Hanebeck<br>
-            <em>Proceedings of the 2018 21st International Conference on Information Fusion (FUSION), Cambridge, United Kingdom </em> <a href="https://doi.org/10.23919/ICIF.2018.8455231">[IEEE]</a>
+            <em>Proceedings of the 2018 21st International Conference on Information Fusion (FUSION)</em>, Cambridge, United Kingdom <a href="https://doi.org/10.23919/ICIF.2018.8455231">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
             <strong>Simultaneous Localization and Mapping Using a Novel Dual Quaternion Particle Filter</strong><br>
             <u>Kailai Li</u>, Gerhard Kurz, Lukas Bernreiter, Uwe D. Hanebeck<br>
-            <em>Proceedings of the 2018 21st International Conference on Information Fusion (FUSION), Cambridge, United Kingdom </em> <a href="https://doi.org/10.23919/ICIF.2018.8455347">[IEEE]</a>
+            <em>Proceedings of the 2018 21st International Conference on Information Fusion (FUSION)</em>, Cambridge, United Kingdom <a href="https://doi.org/10.23919/ICIF.2018.8455347">[IEEE]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
