--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                     <p><span style="color:black;font-size:15px;"> Division of Automatic Control, Department of Electrical Engineering, Linköping University, Sweden</span></p>
                     <p><span style="color:black;font-size:15px;"> Contact: kailai.li [at] liu [dot] se</span></p>
                     <p><span style="font-weight:bold;">
-                        <a href="https://scholar.google.com/citations?user=6ehGZ2sAAAAJ&hl">Google Scholar</a> &nbsp/&nbsp
-                        <a href="https://github.com/kailaili">GitHub</a> &nbsp/&nbsp
-                        <a href="https://www.linkedin.com/in/kailai-li-294657b7">LinkedIn</a> &nbsp/&nbsp
-                        <a href="https://orcid.org/0000-0002-2368-3217">ORCID</a> &nbsp/&nbsp
-                        <a href="https://twitter.com/kailaili1">Twitter</a> &nbsp/&nbsp
+                        <a href="https://scholar.google.com/citations?user=6ehGZ2sAAAAJ&hl">Google Scholar</a> &nbsp|&nbsp
+                        <a href="https://github.com/kailaili">GitHub</a> &nbsp|&nbsp
+                        <a href="https://www.linkedin.com/in/kailai-li-294657b7">LinkedIn</a> &nbsp|&nbsp
+                        <a href="https://orcid.org/0000-0002-2368-3217">ORCID</a> &nbsp|&nbsp
+                        <a href="https://twitter.com/kailaili1">Twitter</a> &nbsp|&nbsp
                         <a href="https://www.researchgate.net/profile/Kailai-Li">ResearchGate</a>
                         </span>
                     </p>
