--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <li>
             <strong>Localization of Mobile Agents</strong> (2019-2022)<br>
             Master’s level course at the Deparment of Informatics, Karlsruhe Institute of Technology<br>
-            <em>Teaching assistant</em> for four consecutive years</a>
+            <em>Teaching assistant</em> for four consecutive years.</a> See also my slides for post-exercise sessions <a href="materials/LMA22.pdf">[PDF]</a>
         </li>
         <p class=""style="margin:5px;"></p>
         <li>
