--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 
     <h3>Research Profile</h3>
     <p style="text-align:justify">
-        My major research interests include probabilistic modeling and state estimation in the general domain of understanding physical and cyber-physical systems, with applications to sensor fusion, robotic perception, and learning dynamical systems.
-        I am also interested in developing planning and control methods for uncertain dynamical systems and have the ambition to methodologically unify these aspects through new representations and models with real-world validation. I had the honor to lead the developments of a few open-source real-world robotic systems, including <a href="https://github.com/KIT-ISAS/lili-om">LiLi-OM</a>, a cross-hardware LiDAR-inertial odometry and mapping system,
+        My major research interests lie in agile sensing and trustworthy inference in the general domain of understanding physical and cyber-physical systems, with applications to sensor fusion, robotic perception, and learning dynamical systems. I am also interested in developing planning and control methods for uncertain dynamical systems and have the ambition to methodologically unify these aspects through new representations and models with real-world validation. I had the honor to lead the developments of a few open-source real-world robotic systems, including <a href="https://github.com/KIT-ISAS/lili-om">LiLi-OM</a>, a cross-hardware LiDAR-inertial odometry and mapping system,
         and <a href="https://github.com/KIT-ISAS/SFUISE">SFUISE</a>, a continuous-time UWB-inertial state estimation system. Please refer to the lists of <a href="#papers">papers</a> and <a href="#talks">talks</a> below for more information.
     </p>
     <p style="text-align:justify">
