--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         2023-06: Our paper '' Continuous-Time Ultra-Wideband-Inertial Fusion'' has been publishe on RA-L. We have presented the first systematic sensor fusion framework using quaternion-based cumulative B-splines. Check out our code here <a href="https://github.com/KIT-ISAS/SFUISE">[GitHub]</a>.<br>
         </li>
 </ul>
-           <span style="color:darkblue;font-size:15px;font-weight:bold;">==========</span>
-
+   <span style="color:darkblue;font-size:15px;font-weight:bold;">== oooo ==</span>
+    
     <h3>Short Bio</h3>
     <p style="text-align:justify">I am a postdoctoral fellow working at the Department of Electrical Engineering in collaboration with <a href="https://people.isy.liu.se/en/rt/fredrik/">Fredrik Gustafsson</a> at <a href="https://liu.se">Linköping University (LiU) </a>
         in Sweden from October 2022. I was a postdoctoral researcher at the <a href="https://isas.iar.kit.edu">Intelligent Sensor-Actuator-Systems (ISAS) Lab</a>, Institute for Anthropomatics and Robotics,
