--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         2023-07: Check out my new manuscript on embedding B-splines in recursive state estimation <a href="https://arxiv.org/abs/2307.00637">[arXiv]</a>.<br>
         </li>
         <li>
-        2023-06: Our paper '' Continuous-Time Ultra-Wideband-Inertial Fusion'' has been publishe on RA-L. We have presented the first systematic sensor fusion framework using quaternion-based cumulative B-splines. Check out our code here <a href="https://github.com/KIT-ISAS/SFUISE">[GitHub]</a>.<br>
+        2023-06: Our paper '' Continuous-Time Ultra-Wideband-Inertial Fusion'' has been published on RA-L. We have presented the first systematic sensor fusion framework using quaternion-based cumulative B-splines. Check out our code here <a href="https://github.com/KIT-ISAS/SFUISE">[GitHub]</a>.<br>
         </li>
 </ul>
    <span style="color:darkblue;font-size:15px;font-weight:bold;">==========</span>
