added link to eusipco 23

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
    <span style="color:darkblue;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>
         <li>
-        2023-08: Our paper ''Weighted Total Least Squares for Quadratic Errors-in-Variable Regression'' has been accepted by the 31st European Signal Processing Conference (EUSIPCO) and selected as <strong>Best Student Paper Finalist</strong>.<br>
+        2023-08: Our paper ''Weighted Total Least Squares for Quadratic Errors-in-Variable Regression'' has been accepted by the 31st European Signal Processing Conference (EUSIPCO) and selected as <strong>Best Student Paper Finalist</strong> <a href="http://eusipco2023.org/best_student_paper_contest.html">[web]</a>.<br>
         </li>
         <li>
         2023-07: Check out my new manuscript on embedding B-splines in recursive state estimation <a href="https://arxiv.org/abs/2307.00637">[arXiv]</a>.<br>
@@ -274,7 +274,7 @@
             <strong> Weighted Total Least Squares for Quadratic Errors-in-Variable Regression </strong><br>
             Peng Liu, <u>Kailai Li</u>, Gustaf Hendeby, Fredrik Gustafsson <br>
             <em>Proceedings of the 2023 31st European Signal Processing Conference (EUSIPCO)</em>, Helsinki, Finland (Accepted) <br>
-            <span style="color:darkviolet;font-weight:bold;">Best Student Paper Finalist</span>
+            <span style="color:darkviolet;font-weight:bold;">Best Student Paper Finalist</span> <a href="http://eusipco2023.org/best_student_paper_contest.html">[web]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
