--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
    <span style="color:darkblue;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>
         <li>
-        2023-08: Our paper ''Weighted Total Least Squares for Quadratic Errors-in-Variable Regression'' has been accepted by the 31st European Signal Processing Conference (EUSIPCO) and selected as <strong>Best Student Paper Finalist</strong> <a href="http://eusipco2023.org/best_student_paper_contest.html">[web]</a>.<br>
+        2023-08: Our paper ''Weighted Total Least Squares for Quadratic Errors-in-Variable Regression'' has been accepted by the 31st European Signal Processing Conference (EUSIPCO) and selected as <strong>Best Student Paper Finalist</strong> <a href="http://eusipco2023.org/best_student_paper_contest.html">[link]</a>.<br>
         </li>
         <li>
         2023-07: Check out my new manuscript on embedding B-splines in recursive state estimation <a href="https://arxiv.org/abs/2307.00637">[arXiv]</a>.<br>
@@ -135,7 +135,7 @@
     
     <h3 id="award"> Awards </h3>
         <ul>
-            <li> 2023: Best Student Paper Finalist at the 31st European Signal Processing Conference, EUSIPCO 2023 </li>
+            <li> 2023: Best Student Paper Finalist at the 31st European Signal Processing Conference, EUSIPCO 2023 <a href="http://eusipco2023.org/best_student_paper_contest.html">[link]</a> </li>
             <li> 2022: Jean-Pierre Le Cadre Best Paper Award: First Runner-Up by the International Society for Information Fusion (ISIF) at FUSION 2022 <a href="https://isas.iar.kit.edu/pdf/award/FUSION2022_BEST_PAPER_AWARD_FIRST_RUNNER_UP.pdf">[link]</a> </li>
             <p class="" style="margin: 2px;"></p>
             <li> 2021: Best Lab Practical Course “Machine Learning and Intelligent System” by the Department of Informatics, Karlsruhe Institute of Technology <a href="https://isas.iar.kit.edu/pdf/award/Auszeichnung_bestes_Praktikum_SS21.pdf">[link]</a></li>
@@ -274,7 +274,7 @@
             <strong> Weighted Total Least Squares for Quadratic Errors-in-Variable Regression </strong><br>
             Peng Liu, <u>Kailai Li</u>, Gustaf Hendeby, Fredrik Gustafsson <br>
             <em>Proceedings of the 2023 31st European Signal Processing Conference (EUSIPCO)</em>, Helsinki, Finland (Accepted) <br>
-            <span style="color:darkviolet;font-weight:bold;">Best Student Paper Finalist</span> <a href="http://eusipco2023.org/best_student_paper_contest.html">[web]</a>
+            <span style="color:darkviolet;font-weight:bold;">Best Student Paper Finalist</span> <a href="http://eusipco2023.org/best_student_paper_contest.html">[link]</a>
         </li>
         <p class="" style="margin: 5px;"></p>
         <li>
