added projects description

--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
     
    <h3 id="projects"> Projects </h3>
         <ul>
+        <p style="text-align:justify">
+        In Germany, I have acquired a total of 800,000 EUR research funding as the principle investigator (PI) or the author of the grant proposal for overall 3 projects (the first three listed below). In Sweden, I have applied for two grants of overall 96 PMs (two full PhD positions) as PI in 2023. These two projects are not listed below.</p>
             <li>
                 <strong>Gaussian Process Modeling on Directional Manifolds for Data-Driven Estimation of Rigid Body Motion</strong> (2021-2024)<br>
                 Funded  within the Individual Research Grant Program by the German Research Foundation (DFG), Germany <a href="https://gepris.dfg.de/gepris/projekt/458747635?language=en">[link]</a><br>
@@ -208,7 +210,7 @@
                 <em>Roles: Project execution during PhD research. PI: Uwe D. Hanebeck</em>
             </li>
         </ul>
-        <hr>
+    <hr>
 
     <h3 id="papers"> Preprints </h3>
     <ul>
