--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <p class="" style="margin: 5px;"></p>
             <li>
                 <strong>Recursive Estimation of Rigid Body Motions</strong> (2017-2020)<br>
-                Funded  within the Individual Research Grant Program by the German Research Foundation (DFG), Germany <a href="https://gepris.dfg.de/gepris/projekt/325035548/ergebnisse">[link]</a> <br>
+                Funded  within the Individual Research Grant Program by the German Research Foundation (DFG), Germany <a href="https://gepris.dfg.de/gepris/projekt/325035548?language=en&selectedSubTab=2">[link]</a> <br>
                 <em>Roles: Project execution during PhD research. PI: Uwe D. Hanebeck</em>
             </li>
         </ul>
