--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
    <h3 id="projects"> Projects </h3>
         <ul>
         <p style="text-align:justify">
-        In Germany, I have acquired a total of 800,000 EUR research funding as the principle investigator (PI) or the author of the grant proposal for overall 3 projects (the first three listed below). In Sweden, I have applied for two grants of overall 96 PMs (two full PhD positions) as PI in 2023 (not listed below).</p>
+        In Germany, I have contributed to the acquisition of a total of 800,000 EUR research funding as the principle investigator (PI) or the author of the grant proposal for overall 3 projects (the first three listed below). In Sweden, I have applied for two grants of overall 96 PMs (two full PhD positions) as PI in 2023 (not listed below).</p>
             <li>
                 <strong>Gaussian Process Modeling on Directional Manifolds for Data-Driven Estimation of Rigid Body Motion</strong> (2021-2024)<br>
                 Funded  within the Individual Research Grant Program by the German Research Foundation (DFG), Germany <a href="https://gepris.dfg.de/gepris/projekt/458747635?language=en">[link]</a><br>
