--- a/index.html
+++ b/index.html
@@ -185,29 +185,35 @@
    <h3 id="projects"> Projects </h3>
         <ul>
         <p style="text-align:justify">
-        In Germany, I have contributed to the acquisition of a total of 800,000 EUR research funding as the principle investigator (PI) or the author of the grant proposal for overall 3 projects (the first three listed below). In Sweden, I have applied for two grants of overall 96 PMs (two full PhD positions) as PI in 2023 (not listed below).</p>
+        In Sweden, I have applied for two grants of overall 96 PMs (two full PhD positions) as PI in 2023. They are not listed below.</p>
             <li>
-                <strong>Gaussian Process Modeling on Directional Manifolds for Data-Driven Estimation of Rigid Body Motion</strong> (2021-2024)<br>
-                Funded  within the Individual Research Grant Program by the German Research Foundation (DFG), Germany <a href="https://gepris.dfg.de/gepris/projekt/458747635?language=en">[link]</a><br>
-                <em>Roles: Writing of the grant proposal. PI: Uwe D. Hanebeck</em></em>
+                <strong>Gaussian Process Modeling on Directional Manifolds for Data-Driven Estimation of Rigid Body Motion</strong><br>
+                Funded  within the Individual Research Grant Program by the German Research Foundation (DFG), Germany <a href="https://gepris.dfg.de/gepris/projekt/458747635?language=en">[link]</a> <br>
+                Acquired amount: 300,000 EUR. Project duration: 2021-2024. <br>
+                <em>Roles: Writing of the grant proposal. PI: Uwe D. Hanebeck</em>
             </li>
             <p class="" style="margin: 5px;"></p>
             <li>
-                <strong>ULearn4Mobility – Ubiquitous Spatio-Temporal Learning for Future Mobility</strong> (2021-2023)<br>
-                Funded within the Helmholtz AI Project Program by the Helmholtz Association, Germany <a href="https://www.helmholtz.ai/themenmenue/news/article/29980/index.html">[link]</a><br>
+                <strong>ULearn4Mobility – Ubiquitous Spatio-Temporal Learning for Future Mobility</strong><br>
+                Funded within the Helmholtz AI Project Program by the Helmholtz Association, Germany <a href="https://www.helmholtz.ai/themenmenue/news/article/29980/index.html">[link]</a> <br>
+		Joint project of Karlsruhe Institute of Technology (KIT) & German Aerospace Center (DLR) <br>
+                Acquired amount: 400,000 EUR. Project duration: 2021-2023. <br>
                 <em>Roles: Writing of the grant proposal and project execution. PI: Uwe D. Hanebeck</em>
             </li>
             <p class="" style="margin: 5px;"></p>
             <li>
-                <strong>POMAS – Pose Estimation and Mapping Using Heterogeneous Sensor Networks</strong> (2020-2022)<br>
+                <strong>POMAS – Pose Estimation and Mapping Using Heterogeneous Sensor Networks</strong><br>
                 Funded within the Software Campus Program by the Federal Ministry of Education and Research (BMBF), Germany <a href="https://softwarecampus.de/certificates/18019/">[link]</a><br>
-                <em>Roles: Principle investigator (PI), full-cycle project management and partial execution</em><br>
+               	In cooperation with Trumpf GmbH + Co. KG as industrial partner<br>
+		Acquired amount: 100,000 EUR. Project duration: 2020-2022.<br>
+                <em>Roles: Writing of the grant proposal + Principle investigator (PI) + Project execution in part</em><br>
             </li>
             <p class="" style="margin: 5px;"></p>
             <li>
-                <strong>Recursive Estimation of Rigid Body Motions</strong> (2017-2020)<br>
-                Funded  within the Individual Research Grant Program by the German Research Foundation (DFG), Germany <a href="https://gepris.dfg.de/gepris/projekt/325035548?language=en&selectedSubTab=2">[link]</a> <br>
-                <em>Roles: Project execution during PhD research. PI: Uwe D. Hanebeck</em>
+                <strong>Recursive Estimation of Rigid Body Motions</strong><br>
+                Funded  within the Individual Research Grant Program by the German Research Foundation (DFG), Germany <a href="https://gepris.dfg.de/gepris/projekt/325035548?language=en&selectedSubTab=2">[link]</a><br>
+                Project duration: 2016-2020. <br>
+                <em>Roles: Project execution in part as part of my PhD research. PI: Uwe D. Hanebeck</em>
             </li>
         </ul>
     <hr>
