--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
    <h3 id="projects"> Projects </h3>
         <ul>
         <p style="text-align:justify">
-        In Sweden, I have applied for two grants of overall 96 PMs (two full PhD positions) as PI in 2023. They are not listed below.</p>
+        In Sweden, I have applied for three grants of overall 850,000 EUR as PI in 2023. They are not listed below.</p>
             <li>
                 <strong>Gaussian Process Modeling on Directional Manifolds for Data-Driven Estimation of Rigid Body Motion</strong><br>
                 Funded  within the Individual Research Grant Program by the German Research Foundation (DFG), Germany <a href="https://gepris.dfg.de/gepris/projekt/458747635?language=en">[link]</a> <br>
