--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
    <span style="color:darkblue;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>
         <li>
+        2023-10: I have given a talk on agile sensing and intrinsics-aware inference at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence at the University of Groningen.<br>
+        </li>
+        <li>
         2023-08: Our paper ''Weighted Total Least Squares for Quadratic Errors-in-Variable Regression'' has been accepted by the 31st European Signal Processing Conference (EUSIPCO) and selected as <strong>Best Student Paper Finalist</strong> <a href="http://eusipco2023.org/best_student_paper_contest.html">[link]</a>.<br>
         </li>
         <li>
@@ -450,19 +453,22 @@
     
     <h3 id="talks">Invited Talks </h3>
         <ul>
+                <li>
+                <strong>On Agile Sensing and Intrinsics-Aware Inference for Intelligent Systems</strong><br>
+               	October 2023, University of Groningen<br>
+                <em>Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence</em>
+                <br>
+            </li>
             <li>
                 <strong>On High-Performance Sensor Fusion</strong><br>
                 Mini-Workshop on: Magnetic Field Localisation, Combining Sensor Fusion with Machine Learning and Beyond<br>
                 June 2023, Linköping University<br>
-                <em>Hosts: Prof. Gustaf Hendeby, Prof. Isaac Skog, Prof. Manon Kok</em>
-                <br>
             </li>
             <p class="" style="margin: 5px;"></p>
             <li>
                 <strong>Towards Universal LiDAR Mapping</strong><br>
                 Security Link board meeting<br>
                 February 2023, Linköping University<br>
-                <em>Host: Prof. Fredrik Gustafsson</em>
             </li>
             <p class="" style="margin: 5px;"></p>
             <li>
