--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
    <span style="color:darkblue;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>
         <li>
-        2023-10: I have given a talk on agile sensing and intrinsics-aware inference at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence at the University of Groningen.<br>
+        2023-10: I have given a talk on agile sensing and intrinsics-aware inference at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, University of Groningen.<br>
         </li>
         <li>
         2023-08: Our paper ''Weighted Total Least Squares for Quadratic Errors-in-Variable Regression'' has been accepted by the 31st European Signal Processing Conference (EUSIPCO) and selected as <strong>Best Student Paper Finalist</strong> <a href="http://eusipco2023.org/best_student_paper_contest.html">[link]</a>.<br>
