--- a/index.html
+++ b/index.html
@@ -453,12 +453,13 @@
     
     <h3 id="talks">Invited Talks </h3>
         <ul>
-                <li>
+            <li>
                 <strong>On Agile Sensing and Intrinsics-Aware Inference for Intelligent Systems</strong><br>
                	October 2023, University of Groningen<br>
                 <em>Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence</em>
                 <br>
             </li>
+            <p class="" style="margin: 5px;"></p>
             <li>
                 <strong>On High-Performance Sensor Fusion</strong><br>
                 Mini-Workshop on: Magnetic Field Localisation, Combining Sensor Fusion with Machine Learning and Beyond<br>
