--- a/index.html
+++ b/index.html
@@ -455,9 +455,7 @@
         <ul>
             <li>
                 <strong>On Agile Sensing and Intrinsics-Aware Inference for Intelligent Systems</strong><br>
-               	October 2023, University of Groningen<br>
-                <em>Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence</em>
-                <br>
+               	October 2023, Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, University of Groningen<br>
             </li>
             <p class="" style="margin: 5px;"></p>
             <li>
