--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <tr style="padding:0">
                 <td style="width:60%;vertical-align:middle">
                     <h2>Kailai Li</h2>
-                    <p><span style="color:black;font-size:15px;"> Division of Automatic Control, Department of Electrical Engineering, Linköping University, Sweden</span></p>
+                    <p><span style="color:black;font-size:15px;"> Department of Electrical Engineering, Linköping University, Sweden</span></p>
                     <p><span style="color:black;font-size:15px;"> Contact: kailai.li [at] liu [dot] se</span></p>
                     <p><span style="font-weight:bold;">
                         <a href="https://scholar.google.com/citations?user=6ehGZ2sAAAAJ&hl">Google Scholar</a> &nbsp|&nbsp
@@ -50,6 +50,12 @@
     <br>
    <span style="color:darkblue;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>
+        <li>
+        2023-10: I have received a <strong>Zenith grant</strong> <a href="https://zenith.lith.liu.se/">[link]</a>.<br>
+        </li>
+        <li>
+        2023-10: I have given a talk at the Nordic Navigation Workshop.<br>
+        </li>
         <li>
         2023-10: I have given a talk on agile sensing and intrinsics-aware inference at the Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, University of Groningen.<br>
         </li>
@@ -188,7 +194,13 @@
    <h3 id="projects"> Projects </h3>
         <ul>
         <p style="text-align:justify">
-        In Sweden, I have applied for three grants of overall 850,000 EUR as PI in 2023. They are not listed below.</p>
+        In Sweden, I have applied for three grants of overall 850,000 EUR as PI in 2023. One of them is listed below.</p>
+            <li>
+                <strong>Computational Agile Sensing and Inference for Intelligent Systems</strong><br>
+                Funded  within the ZENITH Program by Linköping University, Sweden <a href="https://zenith.lith.liu.se/">[link]</a> <br>
+                Acquired amount: 600,000 SEK/year. Project duration: 2024-2028. <br>
+                <em>Role: Principle investigator (PI) </em>
+            </li>
             <li>
                 <strong>Gaussian Process Modeling on Directional Manifolds for Data-Driven Estimation of Rigid Body Motion</strong><br>
                 Funded  within the Individual Research Grant Program by the German Research Foundation (DFG), Germany <a href="https://gepris.dfg.de/gepris/projekt/458747635?language=en">[link]</a> <br>
@@ -209,7 +221,7 @@
                 Funded within the Software Campus Program by the Federal Ministry of Education and Research (BMBF), Germany <a href="https://softwarecampus.de/certificates/18019/">[link]</a><br>
                	In cooperation with Trumpf GmbH + Co. KG as industrial partner<br>
 		Acquired amount: 100,000 EUR. Project duration: 2020-2022.<br>
-                <em>Roles: Writing of the grant proposal + Principle investigator (PI) + Project execution in part</em><br>
+                <em>Roles: Principle investigator (PI) + Project execution in part</em><br>
             </li>
             <p class="" style="margin: 5px;"></p>
             <li>
@@ -454,6 +466,11 @@
     <h3 id="talks">Invited Talks </h3>
         <ul>
             <li>
+                <strong>On Sensor Fusion for State Estimation in Mobile Robotics</strong><br>
+               	October 2023, Nordic Navigation Workshop<br>
+            </li>
+            <p class="" style="margin: 5px;"></p>
+            <li>
                 <strong>On Agile Sensing and Intrinsics-Aware Inference for Intelligent Systems</strong><br>
                	October 2023, Bernoulli Institute for Mathematics, Computer Science and Artificial Intelligence, University of Groningen<br>
             </li>
@@ -473,7 +490,6 @@
             <li>
                 <strong>Towards High-Performance Solid-State-LiDAR-Inertial Odometry and Mapping</strong><br>
                 February 2022, Remote Sensing Laboratories, University of Zurich<br>
-                <em>Hosts: Prof. Meredith Christine Schuman, Dr. Felix Morsdorf</em>
             </li>
             <p class="" style="margin: 5px;"></p>
             <li>
