--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
    <span style="color:darkblue;font-size:15px;font-weight:bold;">== News ==</span>
     <ul>
         <li>
-        2023-10: I have received a <strong>Zenith grant</strong> <a href="https://zenith.lith.liu.se/">[link]</a>.<br>
+        2023-10: I have received a <strong>ZENITH grant</strong> <a href="https://zenith.lith.liu.se/">[link]</a>.<br>
         </li>
         <li>
         2023-10: I have given a talk at the Nordic Navigation Workshop.<br>
