--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     </p>
     <p style="text-align:justify">
         Over the years, I have been very lucky to cooperate with many students as a <a href="#teaching">teacher</a> and <a href="#supervision">supervisor</a>.
-        I also have the gratitude to provide regular <a href="#services"> academic services</a> to a few major conferences in robotics, control and information fusion. I have been experienced with writing research grant proposals
-        through a few applications for <a href="#projects">projects</a> with my advisors.
+        I also have the gratitude to provide regular <a href="#services"> academic services</a> to a few major conferences in robotics, control and information fusion. I am experienced with applying for research grants 
+        through a few <a href="#projects">projects</a> together with my collaborators.
     </p>
     <hr>
 
